Update: NEWS file to announce Visual Parking Lot Feature Button

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ WIP
      - dead code removal 
      - More boundschecking
    - deny use of strcat, sprintf, atoi and other unsafe functions
+ - Add Visual Parkinglot Feature Button support
  Fixes:
   - Channel remaining after hangup
   - Timeout / Hangup Scheduler issues 
